# PrivacyFederatedLearning

./: .replit  README.md  TECHNICAL_REPORT.md  data_handler.py  database.py  differential_privacy.py  federated_learning.db  federated_learning.py  federated_utils.py  init_project.py  main.py  model.py  pyproject.toml  reorganize_project.py  replit.nix  requirements.txt  run.sh  visualization.py
.streamlit/: config.toml  credentials.toml
attached_assets/: Pasted-2025-02-28-14-33-35-903-Warning-the-config-option-server-enableCORS-false-is-not-compatible-wit-1740753530934.txt  Pasted-2025-02-28-16-25-27-046-Warning-the-config-option-server-enableCORS-false-is-not-compatible-wit-1740759966901.txt  Pasted-Connected-to-database-sqlite-federated-learning-db-2025-02-28-16-25-40-214-Examining-the-path-o-1740760515891.txt
config/: default_config.json
docs/: conf.py  contributing.rst  examples.rst  index.rst  installation.rst  introduction.rst  usage.rst
docs/api/: core.rst  data.rst  index.rst  models.rst  privacy.rst  ui.rst  utils.rst
dump/: __federated_learning2.py  _federated_learning.py  _main.py
examples/: basic_federated_learning.py
models/: im2col_cython.pyx  layers.py  nn.py  task2.py
src/: __init__.py
src/core/: __init__.py  federated_learning.py
src/data/: __init__.py  data_handler.py
src/models/: __init__.py  legacy_model.py  model.py
src/privacy/: __init__.py  differential_privacy.py
src/ui/: __init__.py  app.py  (+1 more)
tests/: README.md  test_db_operations.py  test_differential_privacy.py  test_federated_integration.py  test_new_features.py
(+2 files in other folders)
